# puma

./: .gitignore  .gitmodules  README.md  TROUBLESHOOTING_GATEWAY.md  deploy.sh  diagnose_network.sh  environment.yml  fastdds_client.xml  frames_2026-01-26_09.50.29.gv  ptz_camear_keyboard.py  pyproject.toml  rtsp_to_ros2_image.py  run_local_teleop.sh  run_rviz_remote.sh  run_teleop.sh  setup_remote_control.sh  start_gateway_control.sh  stream_video.py  teleop_keyboard.py  test_on_robot.sh  test_ptz_camera.py  udp_patrol_bridge_ros2.py  view_ptz_camera.py
dds/: fastdds_host.xml  fastdds_peers.xml
docs/: controller_mapping.md
docs/changelogs/: changelog_2025.11.23_Pedro.md
docs/deeprobotics/: Lynx-M20-Series-Software-Development-Manual-V0.0.4-0 (1) (1).md  ROS2.txt
mission_control/: dashboard.py  local_ros2_teleop.py  robot_ros2_bridge.py  topic_relay_client.py  udp_ros2_bridge.py  udp_ros2_bridge_gateway.py
mission_control/monitoring/: stream_video.py  telemetry_monitor.py
mission_control/teleop/: teleop_robot.py
puma_ros2_ws/: frames_2026-01-26_12.53.07.gv
puma_ros2_ws/src/puma_nodes/: package.xml  setup.cfg  setup.py
puma_ros2_ws/src/puma_nodes/config/: lidar_params.yaml  lidar_tf.yaml  puma_config.rviz  rslidar_rosparams.yaml
puma_ros2_ws/src/puma_nodes/launch/: puma_bringup.launch.py  two_cameras.launch.py
puma_ros2_ws/src/puma_nodes/puma_nodes/: ptz_camera_image_publisher.py  ptz_camera_keyboard_node.py  rtsp_to_ros2_image_node.py  static_tf_from_params_node.py  teleop_keyboard_node.py  udp_patrol_bridge_node.py
puma_ros_ws/src/puma_driver/: package.xml  setup.cfg  setup.py
puma_ros_ws/src/puma_driver/puma_driver/: driver_node.py  protocol_utils.py  robot_client.py
robot_dds/: fastdds.xml  pc2_zrange.py  rs_lidar_multicast.yaml  rs_multicast.yaml  rslidar_rosparams.yaml
robot_deploy/: fastdds_server.xml  fastdds_udp_only.xml  local_ros2_teleop.py  protocol.py  run_bridge.sh  run_teleop_ros2.sh  setup_puma_ros2.sh  teleop_allinone.py  teleop_ros2.py  topic_relay_server.py  udp_ros2_bridge.py  vendor_bridge.py
tests/: get_status.py  test_controller.py
