[project]
name = "puma"
version = "0.1.0"
description = ""
authors = [
    {name = "Perdo33Messi",email = "ge26hes@mytum.de"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "mujoco-lidar (==0.2.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
