<?xml version="1.0"?>
<package format="3">
  <name>puma_nodes</name>
  <version>0.0.0</version>
  <description>PUMA ROS2 nodes (RTSP image, keyboard teleop, UDP patrol bridge).</description>

  <maintainer email="todo@example.com">Pedro</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies (ROS) -->
  <depend>rclpy</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <depend>tf2_ros</depend>

  <!-- For launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Testing (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
